package com.example.ontime.model.dto;

public class ToDoDTO {
}
