@startuml

class User {
    - userID : String
    - username : String
    - email : String
    - password : String
    + setReminder()
    + generateReport()
}

class TaskManager {
    - allTasks : List<TODO>
    - doneTasks : List<TODO>
    - pendingTasks : List<TODO>
    + addTask(task: TODO)
    + removeTask(taskID: String)
    + getTasks()
    + updateStatus(taskID: String, status: String)
}

class TODO {
    - taskID : String
    - title : String
    - description : String
    - dueDate : Date
    - priority : String
    - status : String
    - creationTime : Date
    + addReminder(reminder: Reminder)
}

class Reminder {
    - reminderID : String
    - reminderDateTime : Date
    - recurrence : String
    - recurrenceTimeStamps : List<Date>
    + triggerNotification()
    + scheduleNext()
}

class Notification {
    - sentDateTime : Date
    + send()
}

class Report {
    - timeFrame : String
    + generate(tasks: List<TODO>)
}

User "1" -- "1" TaskManager : owns
TaskManager "1" -- "0..*" TODO : manages
TODO "1" -- "0..*" Reminder : has
Reminder "1" -- "1..*" Notification : triggers
User "1" -- "1..*" Report : generates
Report "1..*" -- "1" TaskManager : collects

@enduml
